// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddEditFilter tests add filter assasinated eq: AddEditFilter tests add filter assasinated eq 1`] = `
<div>
  <div
    style="margin: 10px 0px;"
  >
    <b>
      was assasinated
    </b>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          checked=""
          type="radio"
          value="eq"
        />
        was assasinated
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="ne"
        />
        was not assasinated
      </label>
    </div>
  </div>
  <div
    style="margin-top: 20px;"
  >
    <button
      class="btn btn-sm btn-primary"
      type="button"
    >
      Apply Filter
    </button>
  </div>
</div>
`;

exports[`AddEditFilter tests add filter assasinated ne: AddEditFilter tests add filter assasinated ne 1`] = `
<div>
  <div
    style="margin: 10px 0px;"
  >
    <b>
      was assasinated
    </b>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="eq"
        />
        was assasinated
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          checked=""
          type="radio"
          value="ne"
        />
        was not assasinated
      </label>
    </div>
  </div>
  <div
    style="margin-top: 20px;"
  >
    <button
      class="btn btn-sm btn-primary"
      type="button"
    >
      Apply Filter
    </button>
  </div>
</div>
`;

exports[`AddEditFilter tests add filter birth_year eq: AddEditFilter tests add filter birth_year eq 1`] = `
<div>
  <div
    style="margin: 10px 0px;"
  >
    <b>
      birth_year
    </b>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          checked=""
          type="radio"
          value="eq"
        />
        is equal to
      </label>
    </div>
    <div
      style="margin-left: 20px;"
    >
      <span
        class="has-error"
      >
        <input
          class="form-control input-sm"
          type="number"
          value=""
        />
      </span>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="ne"
        />
        is not equal to
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="lt"
        />
        is less than
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="gt"
        />
        is greater than
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="between"
        />
        is between
      </label>
    </div>
  </div>
  <div
    style="margin-top: 20px;"
  >
    <button
      class="btn btn-sm btn-primary"
      type="button"
    >
      Apply Filter
    </button>
  </div>
</div>
`;

exports[`AddEditFilter tests add filter birth_year gt: AddEditFilter tests add filter birth_year gt 1`] = `
<div>
  <div
    style="margin: 10px 0px;"
  >
    <b>
      birth_year
    </b>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="eq"
        />
        is equal to
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="ne"
        />
        is not equal to
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="lt"
        />
        is less than
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          checked=""
          type="radio"
          value="gt"
        />
        is greater than
      </label>
    </div>
    <div
      style="margin-left: 20px;"
    >
      <span
        class="has-error"
      >
        <input
          class="form-control input-sm"
          type="number"
          value=""
        />
      </span>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="between"
        />
        is between
      </label>
    </div>
  </div>
  <div
    style="margin-top: 20px;"
  >
    <button
      class="btn btn-sm btn-primary"
      type="button"
    >
      Apply Filter
    </button>
  </div>
</div>
`;

exports[`AddEditFilter tests add filter birth_year lt: AddEditFilter tests add filter birth_year lt 1`] = `
<div>
  <div
    style="margin: 10px 0px;"
  >
    <b>
      birth_year
    </b>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="eq"
        />
        is equal to
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="ne"
        />
        is not equal to
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          checked=""
          type="radio"
          value="lt"
        />
        is less than
      </label>
    </div>
    <div
      style="margin-left: 20px;"
    >
      <span
        class="has-error"
      >
        <input
          class="form-control input-sm"
          type="number"
          value=""
        />
      </span>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="gt"
        />
        is greater than
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="between"
        />
        is between
      </label>
    </div>
  </div>
  <div
    style="margin-top: 20px;"
  >
    <button
      class="btn btn-sm btn-primary"
      type="button"
    >
      Apply Filter
    </button>
  </div>
</div>
`;

exports[`AddEditFilter tests add filter birth_year ne: AddEditFilter tests add filter birth_year ne 1`] = `
<div>
  <div
    style="margin: 10px 0px;"
  >
    <b>
      birth_year
    </b>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="eq"
        />
        is equal to
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          checked=""
          type="radio"
          value="ne"
        />
        is not equal to
      </label>
    </div>
    <div
      style="margin-left: 20px;"
    >
      <span
        class="has-error"
      >
        <input
          class="form-control input-sm"
          type="number"
          value=""
        />
      </span>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="lt"
        />
        is less than
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="gt"
        />
        is greater than
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="between"
        />
        is between
      </label>
    </div>
  </div>
  <div
    style="margin-top: 20px;"
  >
    <button
      class="btn btn-sm btn-primary"
      type="button"
    >
      Apply Filter
    </button>
  </div>
</div>
`;

exports[`AddEditFilter tests add filter death_year eq: AddEditFilter tests add filter death_year eq 1`] = `
<div>
  <div
    style="margin: 10px 0px;"
  >
    <b>
      death_year
    </b>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          checked=""
          type="radio"
          value="eq"
        />
        is equal to
      </label>
    </div>
    <div
      style="margin-left: 20px;"
    >
      <span
        class="has-error"
      >
        <input
          class="form-control input-sm"
          type="number"
          value=""
        />
      </span>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="ne"
        />
        is not equal to
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="lt"
        />
        is less than
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="gt"
        />
        is greater than
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="between"
        />
        is between
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="notnull"
        />
        has a value
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="null"
        />
        does not have a value
      </label>
    </div>
  </div>
  <div
    style="margin-top: 20px;"
  >
    <button
      class="btn btn-sm btn-primary"
      type="button"
    >
      Apply Filter
    </button>
  </div>
</div>
`;

exports[`AddEditFilter tests add filter death_year gt: AddEditFilter tests add filter death_year gt 1`] = `
<div>
  <div
    style="margin: 10px 0px;"
  >
    <b>
      death_year
    </b>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="eq"
        />
        is equal to
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="ne"
        />
        is not equal to
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="lt"
        />
        is less than
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          checked=""
          type="radio"
          value="gt"
        />
        is greater than
      </label>
    </div>
    <div
      style="margin-left: 20px;"
    >
      <span
        class="has-error"
      >
        <input
          class="form-control input-sm"
          type="number"
          value=""
        />
      </span>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="between"
        />
        is between
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="notnull"
        />
        has a value
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="null"
        />
        does not have a value
      </label>
    </div>
  </div>
  <div
    style="margin-top: 20px;"
  >
    <button
      class="btn btn-sm btn-primary"
      type="button"
    >
      Apply Filter
    </button>
  </div>
</div>
`;

exports[`AddEditFilter tests add filter death_year lt: AddEditFilter tests add filter death_year lt 1`] = `
<div>
  <div
    style="margin: 10px 0px;"
  >
    <b>
      death_year
    </b>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="eq"
        />
        is equal to
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="ne"
        />
        is not equal to
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          checked=""
          type="radio"
          value="lt"
        />
        is less than
      </label>
    </div>
    <div
      style="margin-left: 20px;"
    >
      <span
        class="has-error"
      >
        <input
          class="form-control input-sm"
          type="number"
          value=""
        />
      </span>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="gt"
        />
        is greater than
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="between"
        />
        is between
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="notnull"
        />
        has a value
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="null"
        />
        does not have a value
      </label>
    </div>
  </div>
  <div
    style="margin-top: 20px;"
  >
    <button
      class="btn btn-sm btn-primary"
      type="button"
    >
      Apply Filter
    </button>
  </div>
</div>
`;

exports[`AddEditFilter tests add filter death_year ne: AddEditFilter tests add filter death_year ne 1`] = `
<div>
  <div
    style="margin: 10px 0px;"
  >
    <b>
      death_year
    </b>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="eq"
        />
        is equal to
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          checked=""
          type="radio"
          value="ne"
        />
        is not equal to
      </label>
    </div>
    <div
      style="margin-left: 20px;"
    >
      <span
        class="has-error"
      >
        <input
          class="form-control input-sm"
          type="number"
          value=""
        />
      </span>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="lt"
        />
        is less than
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="gt"
        />
        is greater than
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="between"
        />
        is between
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="notnull"
        />
        has a value
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="null"
        />
        does not have a value
      </label>
    </div>
  </div>
  <div
    style="margin-top: 20px;"
  >
    <button
      class="btn btn-sm btn-primary"
      type="button"
    >
      Apply Filter
    </button>
  </div>
</div>
`;

exports[`AddEditFilter tests add filter death_year notnull: AddEditFilter tests add filter death_year notnull 1`] = `
<div>
  <div
    style="margin: 10px 0px;"
  >
    <b>
      death_year
    </b>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="eq"
        />
        is equal to
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="ne"
        />
        is not equal to
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="lt"
        />
        is less than
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="gt"
        />
        is greater than
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="between"
        />
        is between
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          checked=""
          type="radio"
          value="notnull"
        />
        has a value
      </label>
    </div>
    <div
      style="margin-left: 20px;"
    />
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="null"
        />
        does not have a value
      </label>
    </div>
  </div>
  <div
    style="margin-top: 20px;"
  >
    <button
      class="btn btn-sm btn-primary"
      type="button"
    >
      Apply Filter
    </button>
  </div>
</div>
`;

exports[`AddEditFilter tests add filter death_year null: AddEditFilter tests add filter death_year null 1`] = `
<div>
  <div
    style="margin: 10px 0px;"
  >
    <b>
      death_year
    </b>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="eq"
        />
        is equal to
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="ne"
        />
        is not equal to
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="lt"
        />
        is less than
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="gt"
        />
        is greater than
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="between"
        />
        is between
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="notnull"
        />
        has a value
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          checked=""
          type="radio"
          value="null"
        />
        does not have a value
      </label>
    </div>
    <div
      style="margin-left: 20px;"
    />
  </div>
  <div
    style="margin-top: 20px;"
  >
    <button
      class="btn btn-sm btn-primary"
      type="button"
    >
      Apply Filter
    </button>
  </div>
</div>
`;

exports[`AddEditFilter tests add filter empty eq: AddEditFilter tests add filter empty eq 1`] = `
<div>
  <div
    style="margin: 10px 0px;"
  >
    <b>
      empty
    </b>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          checked=""
          type="radio"
          value="eq"
        />
        is equal to
      </label>
    </div>
    <div
      style="margin-left: 20px;"
    >
      <span
        class="has-error"
      >
        <input
          class="form-control input-sm"
          type="number"
          value=""
        />
      </span>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="ne"
        />
        is not equal to
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="lt"
        />
        is less than
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="gt"
        />
        is greater than
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="between"
        />
        is between
      </label>
    </div>
  </div>
  <div
    style="margin-top: 20px;"
  >
    <button
      class="btn btn-sm btn-primary"
      type="button"
    >
      Apply Filter
    </button>
  </div>
</div>
`;

exports[`AddEditFilter tests add filter empty gt: AddEditFilter tests add filter empty gt 1`] = `
<div>
  <div
    style="margin: 10px 0px;"
  >
    <b>
      empty
    </b>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="eq"
        />
        is equal to
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="ne"
        />
        is not equal to
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="lt"
        />
        is less than
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          checked=""
          type="radio"
          value="gt"
        />
        is greater than
      </label>
    </div>
    <div
      style="margin-left: 20px;"
    >
      <span
        class="has-error"
      >
        <input
          class="form-control input-sm"
          type="number"
          value=""
        />
      </span>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="between"
        />
        is between
      </label>
    </div>
  </div>
  <div
    style="margin-top: 20px;"
  >
    <button
      class="btn btn-sm btn-primary"
      type="button"
    >
      Apply Filter
    </button>
  </div>
</div>
`;

exports[`AddEditFilter tests add filter empty lt: AddEditFilter tests add filter empty lt 1`] = `
<div>
  <div
    style="margin: 10px 0px;"
  >
    <b>
      empty
    </b>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="eq"
        />
        is equal to
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="ne"
        />
        is not equal to
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          checked=""
          type="radio"
          value="lt"
        />
        is less than
      </label>
    </div>
    <div
      style="margin-left: 20px;"
    >
      <span
        class="has-error"
      >
        <input
          class="form-control input-sm"
          type="number"
          value=""
        />
      </span>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="gt"
        />
        is greater than
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="between"
        />
        is between
      </label>
    </div>
  </div>
  <div
    style="margin-top: 20px;"
  >
    <button
      class="btn btn-sm btn-primary"
      type="button"
    >
      Apply Filter
    </button>
  </div>
</div>
`;

exports[`AddEditFilter tests add filter empty ne: AddEditFilter tests add filter empty ne 1`] = `
<div>
  <div
    style="margin: 10px 0px;"
  >
    <b>
      empty
    </b>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="eq"
        />
        is equal to
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          checked=""
          type="radio"
          value="ne"
        />
        is not equal to
      </label>
    </div>
    <div
      style="margin-left: 20px;"
    >
      <span
        class="has-error"
      >
        <input
          class="form-control input-sm"
          type="number"
          value=""
        />
      </span>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="lt"
        />
        is less than
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="gt"
        />
        is greater than
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="between"
        />
        is between
      </label>
    </div>
  </div>
  <div
    style="margin-top: 20px;"
  >
    <button
      class="btn btn-sm btn-primary"
      type="button"
    >
      Apply Filter
    </button>
  </div>
</div>
`;

exports[`AddEditFilter tests add filter left_office eq: AddEditFilter tests add filter left_office eq 1`] = `
<div>
  <div
    style="margin: 10px 0px;"
  >
    <b>
      left_office
    </b>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          checked=""
          type="radio"
          value="eq"
        />
        is equal to
      </label>
    </div>
    <div
      style="margin-left: 20px;"
    >
      <span>
        <span
          class=""
        >
          <input
            autocomplete="on"
            class="form-control"
            placeholder="MM/DD/YYYY"
            style="width: 100%;"
            type="text"
            value=""
          />
          <div
            style="position: relative;"
          />
          <input
            data-formattedvalue=""
            type="hidden"
            value=""
          />
        </span>
      </span>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="lt"
        />
        is before
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="gt"
        />
        is after
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="between"
        />
        is between
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="notnull"
        />
        has a value
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="null"
        />
        does not have a value
      </label>
    </div>
  </div>
  <div
    style="margin-top: 20px;"
  >
    <button
      class="btn btn-sm btn-primary"
      type="button"
    >
      Apply Filter
    </button>
  </div>
</div>
`;

exports[`AddEditFilter tests add filter left_office gt: AddEditFilter tests add filter left_office gt 1`] = `
<div>
  <div
    style="margin: 10px 0px;"
  >
    <b>
      left_office
    </b>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="eq"
        />
        is equal to
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="lt"
        />
        is before
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          checked=""
          type="radio"
          value="gt"
        />
        is after
      </label>
    </div>
    <div
      style="margin-left: 20px;"
    >
      <span>
        <span
          class=""
        >
          <input
            autocomplete="on"
            class="form-control"
            placeholder="MM/DD/YYYY"
            style="width: 100%;"
            type="text"
            value=""
          />
          <div
            style="position: relative;"
          />
          <input
            data-formattedvalue=""
            type="hidden"
            value=""
          />
        </span>
      </span>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="between"
        />
        is between
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="notnull"
        />
        has a value
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="null"
        />
        does not have a value
      </label>
    </div>
  </div>
  <div
    style="margin-top: 20px;"
  >
    <button
      class="btn btn-sm btn-primary"
      type="button"
    >
      Apply Filter
    </button>
  </div>
</div>
`;

exports[`AddEditFilter tests add filter left_office lt: AddEditFilter tests add filter left_office lt 1`] = `
<div>
  <div
    style="margin: 10px 0px;"
  >
    <b>
      left_office
    </b>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="eq"
        />
        is equal to
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          checked=""
          type="radio"
          value="lt"
        />
        is before
      </label>
    </div>
    <div
      style="margin-left: 20px;"
    >
      <span>
        <span
          class=""
        >
          <input
            autocomplete="on"
            class="form-control"
            placeholder="MM/DD/YYYY"
            style="width: 100%;"
            type="text"
            value=""
          />
          <div
            style="position: relative;"
          />
          <input
            data-formattedvalue=""
            type="hidden"
            value=""
          />
        </span>
      </span>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="gt"
        />
        is after
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="between"
        />
        is between
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="notnull"
        />
        has a value
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="null"
        />
        does not have a value
      </label>
    </div>
  </div>
  <div
    style="margin-top: 20px;"
  >
    <button
      class="btn btn-sm btn-primary"
      type="button"
    >
      Apply Filter
    </button>
  </div>
</div>
`;

exports[`AddEditFilter tests add filter left_office notnull: AddEditFilter tests add filter left_office notnull 1`] = `
<div>
  <div
    style="margin: 10px 0px;"
  >
    <b>
      left_office
    </b>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="eq"
        />
        is equal to
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="lt"
        />
        is before
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="gt"
        />
        is after
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="between"
        />
        is between
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          checked=""
          type="radio"
          value="notnull"
        />
        has a value
      </label>
    </div>
    <div
      style="margin-left: 20px;"
    />
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="null"
        />
        does not have a value
      </label>
    </div>
  </div>
  <div
    style="margin-top: 20px;"
  >
    <button
      class="btn btn-sm btn-primary"
      type="button"
    >
      Apply Filter
    </button>
  </div>
</div>
`;

exports[`AddEditFilter tests add filter left_office null: AddEditFilter tests add filter left_office null 1`] = `
<div>
  <div
    style="margin: 10px 0px;"
  >
    <b>
      left_office
    </b>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="eq"
        />
        is equal to
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="lt"
        />
        is before
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="gt"
        />
        is after
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="between"
        />
        is between
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="notnull"
        />
        has a value
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          checked=""
          type="radio"
          value="null"
        />
        does not have a value
      </label>
    </div>
    <div
      style="margin-left: 20px;"
    />
  </div>
  <div
    style="margin-top: 20px;"
  >
    <button
      class="btn btn-sm btn-primary"
      type="button"
    >
      Apply Filter
    </button>
  </div>
</div>
`;

exports[`AddEditFilter tests add filter number eq: AddEditFilter tests add filter number eq 1`] = `
<div>
  <div
    style="margin: 10px 0px;"
  >
    <b>
      number
    </b>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          checked=""
          type="radio"
          value="eq"
        />
        is equal to
      </label>
    </div>
    <div
      style="margin-left: 20px;"
    >
      <span
        class="has-error"
      >
        <input
          class="form-control input-sm"
          type="number"
          value=""
        />
      </span>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="ne"
        />
        is not equal to
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="lt"
        />
        is less than
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="gt"
        />
        is greater than
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="between"
        />
        is between
      </label>
    </div>
  </div>
  <div
    style="margin-top: 20px;"
  >
    <button
      class="btn btn-sm btn-primary"
      type="button"
    >
      Apply Filter
    </button>
  </div>
</div>
`;

exports[`AddEditFilter tests add filter number gt: AddEditFilter tests add filter number gt 1`] = `
<div>
  <div
    style="margin: 10px 0px;"
  >
    <b>
      number
    </b>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="eq"
        />
        is equal to
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="ne"
        />
        is not equal to
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="lt"
        />
        is less than
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          checked=""
          type="radio"
          value="gt"
        />
        is greater than
      </label>
    </div>
    <div
      style="margin-left: 20px;"
    >
      <span
        class="has-error"
      >
        <input
          class="form-control input-sm"
          type="number"
          value=""
        />
      </span>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="between"
        />
        is between
      </label>
    </div>
  </div>
  <div
    style="margin-top: 20px;"
  >
    <button
      class="btn btn-sm btn-primary"
      type="button"
    >
      Apply Filter
    </button>
  </div>
</div>
`;

exports[`AddEditFilter tests add filter number lt: AddEditFilter tests add filter number lt 1`] = `
<div>
  <div
    style="margin: 10px 0px;"
  >
    <b>
      number
    </b>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="eq"
        />
        is equal to
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="ne"
        />
        is not equal to
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          checked=""
          type="radio"
          value="lt"
        />
        is less than
      </label>
    </div>
    <div
      style="margin-left: 20px;"
    >
      <span
        class="has-error"
      >
        <input
          class="form-control input-sm"
          type="number"
          value=""
        />
      </span>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="gt"
        />
        is greater than
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="between"
        />
        is between
      </label>
    </div>
  </div>
  <div
    style="margin-top: 20px;"
  >
    <button
      class="btn btn-sm btn-primary"
      type="button"
    >
      Apply Filter
    </button>
  </div>
</div>
`;

exports[`AddEditFilter tests add filter number ne: AddEditFilter tests add filter number ne 1`] = `
<div>
  <div
    style="margin: 10px 0px;"
  >
    <b>
      number
    </b>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="eq"
        />
        is equal to
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          checked=""
          type="radio"
          value="ne"
        />
        is not equal to
      </label>
    </div>
    <div
      style="margin-left: 20px;"
    >
      <span
        class="has-error"
      >
        <input
          class="form-control input-sm"
          type="number"
          value=""
        />
      </span>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="lt"
        />
        is less than
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="gt"
        />
        is greater than
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="between"
        />
        is between
      </label>
    </div>
  </div>
  <div
    style="margin-top: 20px;"
  >
    <button
      class="btn btn-sm btn-primary"
      type="button"
    >
      Apply Filter
    </button>
  </div>
</div>
`;

exports[`AddEditFilter tests add filter party in: AddEditFilter tests add filter party in 1`] = `
<div>
  <div
    style="margin: 10px 0px;"
  >
    <b>
      party
    </b>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          checked=""
          type="radio"
          value="in"
        />
        is any of
      </label>
    </div>
    <div
      style="margin-left: 20px;"
    >
      <div
        class="Select small is-clearable is-searchable Select--multi"
      >
        <div
          class="Select-control"
        >
          <div
            class="Select-multi-value-wrapper"
            id="react-select-2--value"
          >
            <div
              class="Select-placeholder"
            >
              Select...
            </div>
            <div
              class="Select-input"
              style="display: inline-block;"
            >
              <input
                aria-activedescendant="react-select-2--value"
                aria-expanded="false"
                aria-haspopup="false"
                aria-owns=""
                role="combobox"
                style="box-sizing: content-box; width: 5px;"
                value=""
              />
              <div
                style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
              />
            </div>
          </div>
          <span
            class="Select-arrow-zone"
          >
            <span
              class="Select-arrow"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="notin"
        />
        is not any of
      </label>
    </div>
  </div>
  <div
    style="margin-top: 20px;"
  >
    <button
      class="btn btn-sm btn-primary"
      type="button"
    >
      Apply Filter
    </button>
  </div>
</div>
`;

exports[`AddEditFilter tests add filter party notin: AddEditFilter tests add filter party notin 1`] = `
<div>
  <div
    style="margin: 10px 0px;"
  >
    <b>
      party
    </b>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="in"
        />
        is any of
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          checked=""
          type="radio"
          value="notin"
        />
        is not any of
      </label>
    </div>
    <div
      style="margin-left: 20px;"
    >
      <div
        class="Select small is-clearable is-searchable Select--multi"
      >
        <div
          class="Select-control"
        >
          <div
            class="Select-multi-value-wrapper"
            id="react-select-3--value"
          >
            <div
              class="Select-placeholder"
            >
              Select...
            </div>
            <div
              class="Select-input"
              style="display: inline-block;"
            >
              <input
                aria-activedescendant="react-select-3--value"
                aria-expanded="false"
                aria-haspopup="false"
                aria-owns=""
                role="combobox"
                style="box-sizing: content-box; width: 5px;"
                value=""
              />
              <div
                style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
              />
            </div>
          </div>
          <span
            class="Select-arrow-zone"
          >
            <span
              class="Select-arrow"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 20px;"
  >
    <button
      class="btn btn-sm btn-primary"
      type="button"
    >
      Apply Filter
    </button>
  </div>
</div>
`;

exports[`AddEditFilter tests add filter president contains: AddEditFilter tests add filter president contains 1`] = `
<div>
  <div
    style="margin: 10px 0px;"
  >
    <b>
      president
    </b>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          checked=""
          type="radio"
          value="contains"
        />
        contains
      </label>
    </div>
    <div
      style="margin-left: 20px;"
    >
      <span>
        <input
          class="form-control"
          value=""
        />
      </span>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="notcontains"
        />
        does not contain
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="eq"
        />
        is equal to
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="ne"
        />
        is not equal to
      </label>
    </div>
  </div>
  <div
    style="margin-top: 20px;"
  >
    <button
      class="btn btn-sm btn-primary"
      type="button"
    >
      Apply Filter
    </button>
  </div>
</div>
`;

exports[`AddEditFilter tests add filter president eq: AddEditFilter tests add filter president eq 1`] = `
<div>
  <div
    style="margin: 10px 0px;"
  >
    <b>
      president
    </b>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="contains"
        />
        contains
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="notcontains"
        />
        does not contain
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          checked=""
          type="radio"
          value="eq"
        />
        is equal to
      </label>
    </div>
    <div
      style="margin-left: 20px;"
    >
      <span>
        <input
          class="form-control"
          value=""
        />
      </span>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="ne"
        />
        is not equal to
      </label>
    </div>
  </div>
  <div
    style="margin-top: 20px;"
  >
    <button
      class="btn btn-sm btn-primary"
      type="button"
    >
      Apply Filter
    </button>
  </div>
</div>
`;

exports[`AddEditFilter tests add filter president ne: AddEditFilter tests add filter president ne 1`] = `
<div>
  <div
    style="margin: 10px 0px;"
  >
    <b>
      president
    </b>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="contains"
        />
        contains
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="notcontains"
        />
        does not contain
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="eq"
        />
        is equal to
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          checked=""
          type="radio"
          value="ne"
        />
        is not equal to
      </label>
    </div>
    <div
      style="margin-left: 20px;"
    >
      <span>
        <input
          class="form-control"
          value=""
        />
      </span>
    </div>
  </div>
  <div
    style="margin-top: 20px;"
  >
    <button
      class="btn btn-sm btn-primary"
      type="button"
    >
      Apply Filter
    </button>
  </div>
</div>
`;

exports[`AddEditFilter tests add filter president notcontains: AddEditFilter tests add filter president notcontains 1`] = `
<div>
  <div
    style="margin: 10px 0px;"
  >
    <b>
      president
    </b>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="contains"
        />
        contains
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          checked=""
          type="radio"
          value="notcontains"
        />
        does not contain
      </label>
    </div>
    <div
      style="margin-left: 20px;"
    >
      <span>
        <input
          class="form-control"
          value=""
        />
      </span>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="eq"
        />
        is equal to
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="ne"
        />
        is not equal to
      </label>
    </div>
  </div>
  <div
    style="margin-top: 20px;"
  >
    <button
      class="btn btn-sm btn-primary"
      type="button"
    >
      Apply Filter
    </button>
  </div>
</div>
`;

exports[`AddEditFilter tests add filter took_office eq: AddEditFilter tests add filter took_office eq 1`] = `
<div>
  <div
    style="margin: 10px 0px;"
  >
    <b>
      took_office
    </b>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          checked=""
          type="radio"
          value="eq"
        />
        is equal to
      </label>
    </div>
    <div
      style="margin-left: 20px;"
    >
      <span>
        <span
          class=""
        >
          <input
            autocomplete="on"
            class="form-control"
            placeholder="MM/DD/YYYY"
            style="width: 100%;"
            type="text"
            value=""
          />
          <div
            style="position: relative;"
          />
          <input
            data-formattedvalue=""
            type="hidden"
            value=""
          />
        </span>
      </span>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="lt"
        />
        is before
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="gt"
        />
        is after
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="between"
        />
        is between
      </label>
    </div>
  </div>
  <div
    style="margin-top: 20px;"
  >
    <button
      class="btn btn-sm btn-primary"
      type="button"
    >
      Apply Filter
    </button>
  </div>
</div>
`;

exports[`AddEditFilter tests add filter took_office gt: AddEditFilter tests add filter took_office gt 1`] = `
<div>
  <div
    style="margin: 10px 0px;"
  >
    <b>
      took_office
    </b>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="eq"
        />
        is equal to
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="lt"
        />
        is before
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          checked=""
          type="radio"
          value="gt"
        />
        is after
      </label>
    </div>
    <div
      style="margin-left: 20px;"
    >
      <span>
        <span
          class=""
        >
          <input
            autocomplete="on"
            class="form-control"
            placeholder="MM/DD/YYYY"
            style="width: 100%;"
            type="text"
            value=""
          />
          <div
            style="position: relative;"
          />
          <input
            data-formattedvalue=""
            type="hidden"
            value=""
          />
        </span>
      </span>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="between"
        />
        is between
      </label>
    </div>
  </div>
  <div
    style="margin-top: 20px;"
  >
    <button
      class="btn btn-sm btn-primary"
      type="button"
    >
      Apply Filter
    </button>
  </div>
</div>
`;

exports[`AddEditFilter tests add filter took_office lt: AddEditFilter tests add filter took_office lt 1`] = `
<div>
  <div
    style="margin: 10px 0px;"
  >
    <b>
      took_office
    </b>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="eq"
        />
        is equal to
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          checked=""
          type="radio"
          value="lt"
        />
        is before
      </label>
    </div>
    <div
      style="margin-left: 20px;"
    >
      <span>
        <span
          class=""
        >
          <input
            autocomplete="on"
            class="form-control"
            placeholder="MM/DD/YYYY"
            style="width: 100%;"
            type="text"
            value=""
          />
          <div
            style="position: relative;"
          />
          <input
            data-formattedvalue=""
            type="hidden"
            value=""
          />
        </span>
      </span>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="gt"
        />
        is after
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="between"
        />
        is between
      </label>
    </div>
  </div>
  <div
    style="margin-top: 20px;"
  >
    <button
      class="btn btn-sm btn-primary"
      type="button"
    >
      Apply Filter
    </button>
  </div>
</div>
`;

exports[`AddEditFilter tests between filter 1`] = `
<div>
  <div
    style="margin: 10px 0px;"
  >
    <b>
      number
    </b>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="eq"
        />
        is equal to
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="ne"
        />
        is not equal to
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="lt"
        />
        is less than
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          type="radio"
          value="gt"
        />
        is greater than
      </label>
    </div>
  </div>
  <div>
    <div
      class="radio"
    >
      <label
        title=""
      >
        <input
          checked=""
          type="radio"
          value="between"
        />
        is between
      </label>
    </div>
    <div
      style="margin-left: 20px;"
    >
      <div>
        <table>
          <tbody>
            <tr>
              <td>
                <span
                  class="has-error"
                >
                  <input
                    class="form-control input-sm"
                    placeholder="min"
                    type="number"
                    value=""
                  />
                </span>
              </td>
              <td
                style="padding: 0px 5px;"
              >
                and
              </td>
              <td>
                <span
                  class="has-error"
                >
                  <input
                    class="form-control input-sm"
                    placeholder="max"
                    type="number"
                    value=""
                  />
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 20px;"
  >
    <button
      class="btn btn-sm btn-primary"
      type="button"
    >
      Apply Filter
    </button>
  </div>
</div>
`;
